# learnopengl

./: .gitignore  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/learnopengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/book2/Sample1_1/: frag.sh
app/src/main/assets/book2/Sample1_5/: frag.sh  frag_tex.sh  vertex.sh  vertex_tex.sh
app/src/main/assets/book2/Sample6_3/: frag.shader  vertex.shader
app/src/main/assets/cjztest/lightmodel/: fragShaderLightPot.shader  fragShaderRoom.shader  vertShaderRoom.shader  vertex.shader
app/src/main/assets/cjztest/lightmodeladvance/: fragShaderBase.shader  fragShaderLightPot.shader  fragShaderRoom.shader  vertShaderRoom.shader  vertexLightArrow.shader
app/src/main/assets/fragColorEffect1/: fragShader.shader  fragShaderBase.shader  fragShaderCircle.shader  fragShaderFrameBufferEffectPicProccesser.shader  fragShaderFrameBufferEffectPicProccesserCombine.shader  fragShaderLightPot.shader  fragShaderSea.shader  fragShaderShowLove.shader  fragShaderTwirl.shader  fragShaderVideo.shader  fragShaderWave.shader  vertShader.shader
app/src/main/assets/sample5_2/: frag.sh  vertex.sh
app/src/main/assets/sample8_1/: frag_color_light.sh  frag_tex_light.shader  vertex_color_light.sh  vertex_tex_light.sh
app/src/main/assets/yuvconvert/: fragShaderYuvConvert.shader
app/src/main/assets/yuvtestdata/: degree_270_1024x2048.nv21  degree_90_1024x2048.nv21
app/src/main/cpp/: opengl_native_lib.cpp
app/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg.c
app/src/main/cpp/gl_whiteboard/: CMakeLists.txt  GLWhiteBoardJNIBridge.cpp  GLWhiteBoardJNIBridge.h  matrix.c  matrix.h
app/src/main/cpp/opengl_decoder/: CMakeLists.txt  Layer.cpp  Layer.h  OpenGLNativeLib.cpp  OpenGLNativeLib.h  OpenGLNativeRender.cpp  OpenGLNativeRender.h  OpenGLNativeRenderJNIBridgeDemo.cpp  OpenGLNativeRenderJNIBridgeDemo.h  RenderProgram.cpp  RenderProgram.h  RenderProgramBlurBackground.cpp  RenderProgramBlurBackground.h  RenderProgramConvolution.cpp  RenderProgramConvolution.h  RenderProgramCornerPick.cpp  RenderProgramCornerPick.h  RenderProgramDebackground.cpp  RenderProgramDebackground.h  RenderProgramFilter.cpp  RenderProgramFilter.h  RenderProgramImage.cpp  RenderProgramImage.h  RenderProgramNoiseReduction.cpp  RenderProgramNoiseReduction.h  RenderProgramOESTexture.cpp  RenderProgramOESTexture.h  RenderProgramYUV.cpp  RenderProgramYUV.h  decode_buffer.cpp  decode_buffer.h  matrix.c  matrixState.c  matrixState.h  opengl_native_lib.c  opengl_native_lib.cpp  opengl_native_lib.h  shaderUtil.c  shaderUtil.h
app/src/main/java/com/androidEffect/snowFlow/: MainActivity.java  Snow.java
app/src/main/java/com/book/Sample5_2/: MatrixState.java  MySurfaceView.java  Sample5_2_Activity.java  ShaderUtil.java  SixPointedStar.java
app/src/main/java/com/book2/: EntranceActivity.java
app/src/main/java/com/book2/Sample1_1/: BufferObjectExampleActivity.java  LoadUtil.java  LoadedObjectVertexNormalTexture.java  MatrixState.java  MySurfaceView.java  Normal.java  ShaderUtil.java
app/src/main/java/com/book2/Sample1_5/: FrameBufferObjectExampleActivity.java  LoadUtil.java  LoadedObjectVertexNormalTexture.java  MatrixState.java  MySurfaceView.java  Normal.java  ShaderUtil.java  TextureRect.java
app/src/main/java/com/book2/Sample5_2/: MatrixState.java  MySurfaceView.java  Sample5_2_Activity.java  ShaderUtil.java  SixPointedStar.java
app/src/main/java/com/book2/Sample6_3/: Ball.java  Constant.java  MatrixState.java  MySurfaceView.java  Sample6_3_Activity.java  ShaderUtil.java
app/src/main/java/com/book2/Sample8_1/: Circle.java  CircleL.java  Cylinder.java  CylinderL.java  CylinderSide.java  CylinderSideL.java  MatrixState.java  MyActivity.java  MySurfaceView.java  ShaderUtil.java
app/src/main/java/com/canvas3d/: MainActivity.java  View3DTest.java
app/src/main/java/com/cjz/littleps/: MainActivity.java  PSEffectLayer.java
app/src/main/java/com/cjztest/coordinateSystem/: GLRenderer.java
app/src/main/java/com/cjztest/glCameraPreview/: Camera2Helper.java  Camera2Listener.java  CameraEffectLayer.java  MainActivity.java
app/src/main/java/com/cjztest/glMyLightModel/: Constant.java  LightControlSurfaceView.java  LightDot.java  LightModelActivity.java  MatrixState.java  RoomBox.java
app/src/main/java/com/cjztest/glMyLightModelAdvance/: Constant.java  LightArrorw.java  LightArrow.java  LightControlSurfaceView.java  LightDot.java  LightModelActivity.java  MatrixState.java  RoomBox.java
app/src/main/java/com/cjztest/glMyLightModelSimple/: Constant.java  LightControlSurfaceView.java  LightDot.java  LightModelActivity.java  MatrixState.java  RoomBox.java
app/src/main/java/com/cjztest/glOffscreenProcess/: EGLMaker.kt  MenuActivity.kt  OffScreenGLDemoActivity.kt  Renderer.kt
app/src/main/java/com/cjztest/glShaderEffect/: EffectLayerBlendTest.java  EffectLayerTest.java  EffectLayerTestYuv.java  GLCircle.java  GLCurvePath.java  GLFragEffect.java  GLFragEffectCircle.java  GLFragEffectFlower.java  GLFragEffectLightPot.java  GLFragEffectProjectTest.java  GLFragEffectSea.java  GLFragEffectTwirlImgEffect.java  GLFragEffectWave.java  GLFrameBufferEffect1.java  GLFrameBufferEffectDrawCircle.java  GLImage.java  (+12 more)
app/src/main/java/com/ffmpeg/: FFMpegUtil.java
app/src/main/java/com/glwhiteboard/: GLLine.java  JniBridge.java  MainActivity.java  WhiteBoardGLSurfaceView.java  WhiteBoardRenderer.java
app/src/main/java/com/mainpage/: MainPage.java
app/src/main/java/com/pboPicProcess/: PboPicProcess.java
app/src/main/java/com/whiteboard/: GLLine.java  JniBridge.java  MainActivity.java  Renderer.java  WhiteBoardGLSurfaceView.java  WhiteBoardRenderer.java
app/src/main/res/layout/: activity_draw_lines.xml  activity_light_model.xml  activity_light_model_advance.xml  book_samples_menu.xml  native_oes_render_test.xml  pbo_pic_process_main_page.xml  ps_activity_main.xml  sample_8_1.xml  shader_effect_choice.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+31 files in other folders)
